--- a/index.html
+++ b/index.html
@@ -5,63 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Commun-EAT-y</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; }
-    h1 { font-size: 2.5rem; margin-bottom: 0; }
-    .tagline { font-size: 1.2rem; margin-top: 0.2rem; color: #555; }
+    :root {
+      --primary: #FF6F61;
+      --secondary: #6B5B95;
+      --accent: #88B04B;
+      --text-light: #ffffff;
+      --text-dark: #333333;
+    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #fafafa; color: var(--text-dark); }
+    .banner {
+      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      padding: 2rem 1rem;
+      text-align: center;
+      color: var(--text-light);
+    }
+    h1 { font-size: 2.5rem; margin: 0; }
+    .tagline { font-size: 1.2rem; margin: 0.5rem 0 0; }
+    .palette {
+      display: flex;
+      justify-content: center;
+      margin: 1rem 0;
+    }
+    .swatch {
+      width: 40px;
+      height: 40px;
+      margin: 0 0.5rem;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
     #controls {
-      margin: 1.5rem 0;
+      margin: 1.5rem auto;
+      max-width: 800px;
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
       align-items: center;
+      justify-content: center;
+      padding: 0 1rem;
     }
-    #location-input {
-      padding: 0.5rem;
-      font-size: 1rem;
-      width: 250px;
-    }
-    #controls select,
-    #controls button {
+    #location-input, #controls select, #controls button {
       padding: 0.5rem 1rem;
       font-size: 1rem;
-      cursor: pointer;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #controls button {
+      background: var(--accent);
+      color: var(--text-light);
+      border: none;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 1rem;
+      margin: 1rem 0;
     }
     th, td {
       text-align: left;
       padding: 0.75rem;
       border-bottom: 1px solid #ddd;
     }
-    th { background: #f4f4f4; }
+    th { background: var(--primary); color: var(--text-light); }
     #map {
       height: 400px;
       width: 100%;
-      margin-top: 1rem;
+      margin: 1rem 0;
     }
-    a.restaurant-link { color: #1a73e8; text-decoration: none; }
+    a.restaurant-link { color: var(--secondary); text-decoration: none; }
     a.restaurant-link:hover { text-decoration: underline; }
-    button.map-btn { padding: 0.3rem 0.6rem; font-size: 0.9rem; cursor: pointer; }
+    button.map-btn { padding: 0.3rem 0.6rem; font-size: 0.9rem; cursor: pointer; background: var(--secondary); color: var(--text-light); border: none; border-radius: 3px; }
     .error { color: red; }
   </style>
 </head>
 <body>
-  <h1>Commun-EAT-y</h1>
-  <p class="tagline">Discover flavor. Share belonging.</p>
+  <div class="banner">
+    <h1>Commun-EAT-y</h1>
+    <p class="tagline">Discover flavor. Share belonging.</p>
+  </div>
+  <div class="palette">
+    <div class="swatch" style="background: var(--primary);"></div>
+    <div class="swatch" style="background: var(--secondary);"></div>
+    <div class="swatch" style="background: var(--accent);"></div>
+  </div>
 
   <div id="controls">
-    <input
-      id="location-input"
-      type="text"
-      placeholder="Enter pincode or locality"
-    />
-
+    <input id="location-input" type="text" placeholder="Enter pincode or locality" />
     <select id="cuisine-select">
       <option value="">Any cuisine</option>
-      <!-- cuisine options -->
       <option>American</option>
       <option>Asian</option>
       <option>Bakery</option>
@@ -102,7 +131,6 @@
       <option>Vegetarian</option>
       <option>Vietnamese</option>
     </select>
-
     <button id="search-btn">Search</button>
     <span id="status"></span>
   </div>
@@ -128,99 +156,69 @@
 
     function initMap() {
       const bangaloreBounds = { north: 13.139, south: 12.787, east: 77.736, west: 77.455 };
-
       geocoder = new google.maps.Geocoder();
       placesService = new google.maps.places.PlacesService(document.createElement('div'));
       infoWindow = new google.maps.InfoWindow();
-
-      // Setup autocomplete restricted to Bangalore
-      const input = document.getElementById('location-input');
-      autocomplete = new google.maps.places.Autocomplete(input, {
+      autocomplete = new google.maps.places.Autocomplete(document.getElementById('location-input'), {
         bounds: bangaloreBounds,
         strictBounds: true,
         types: ['(regions)'],
         componentRestrictions: { country: 'IN' }
       });
-
       document.getElementById('search-btn').addEventListener('click', onSearchClick);
-
       map = new google.maps.Map(document.getElementById('map'), { center: { lat: 12.9716, lng: 77.5946 }, zoom: 12 });
     }
 
     function focusMarker(index) {
-      const marker = markers[index];
-      map.panTo(marker.getPosition());
-      map.setZoom(16);
-      google.maps.event.trigger(marker, 'click');
+      const marker = markers[index]; map.panTo(marker.getPosition()); map.setZoom(16); google.maps.event.trigger(marker, 'click');
     }
 
     function onSearchClick() {
       const address = document.getElementById('location-input').value.trim();
       const cuisine = document.getElementById('cuisine-select').value;
       const status = document.getElementById('status');
-      const tbody = document.querySelector('#restaurant-table tbody');
-      tbody.innerHTML = '';
+      const tbody = document.querySelector('#restaurant-table tbody'); tbody.innerHTML = '';
       status.textContent = '';
-
-      if (!address) {
-        status.textContent = 'Please enter a pincode or locality.'; status.className = 'error'; return;
-      }
+      if (!address) { status.textContent = 'Please enter a pincode or locality.'; status.className = 'error'; return; }
       status.textContent = 'Geocoding...';
       geocoder.geocode({ address }, (results, geocodeStatus) => {
-        if (geocodeStatus !== 'OK' || !results[0]) {
-          status.textContent = 'Could not find that location.'; status.className = 'error'; return;
-        }
+        if (geocodeStatus !== 'OK' || !results[0]) { status.textContent = 'Could not find that location.'; status.className = 'error'; return; }
         status.textContent = 'Searching for top-rated restaurants with >200 reviews...';
         findTopRated(results[0].geometry.location, cuisine);
       });
     }
 
     function findTopRated(location, cuisine) {
-      const request = { location, radius: 3000, type: 'restaurant' };
-      if (cuisine) request.keyword = cuisine;
-
+      const request = { location, radius: 3000, type: 'restaurant' }; if (cuisine) request.keyword = cuisine;
       placesService.nearbySearch(request, (results, placesStatus) => {
-        const status = document.getElementById('status');
-        const tbody = document.querySelector('#restaurant-table tbody');
-        if (placesStatus !== 'OK' || !results || !results.length) {
-          status.textContent = 'No restaurants found.'; status.className = 'error'; return;
-        }
+        const status = document.getElementById('status'); const tbody = document.querySelector('#restaurant-table tbody');
+        if (placesStatus !== 'OK' || !results || !results.length) { status.textContent = 'No restaurants found.'; status.className = 'error'; return; }
         markers.forEach(m => m.setMap(null)); markers = [];
-
-        const filtered = results
-          .filter(r => typeof r.rating === 'number' && (r.user_ratings_total || 0) > 200)
-          .sort((a, b) => b.rating - a.rating || (b.user_ratings_total || 0) - (a.user_ratings_total || 0));
-        const top5 = filtered.slice(0, 5);
-
+        const filtered = results.filter(r => typeof r.rating === 'number' && (r.user_ratings_total || 0) > 200)
+                                .sort((a,b)=>b.rating-a.rating||(b.user_ratings_total||0)-(a.user_ratings_total||0));
+        const top5 = filtered.slice(0,5);
         map.setCenter(location); map.setZoom(14);
-
-        top5.forEach((place, i) => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td><a href="javascript:void(0)" class="restaurant-link" onclick="focusMarker(${i})">${place.name}</a></td>
-            <td>${place.rating.toFixed(1)}</td>
-            <td>${place.user_ratings_total}</td>
-            <td>${place.vicinity || place.formatted_address || ''}</td>
-          `;
+        top5.forEach((place,i)=>{
+          const tr=document.createElement('tr');
+          tr.innerHTML=`<td><a href="javascript:void(0)" class="restaurant-link" onclick="focusMarker(${i})">${place.name}</a></td>`+
+                        `<td>${place.rating.toFixed(1)}</td>`+
+                        `<td>${place.user_ratings_total}</td>`+
+                        `<td>${place.vicinity||place.formatted_address||''}</td>`;
           tbody.appendChild(tr);
-
-          const marker = new google.maps.Marker({ map, position: place.geometry.location, title: place.name });
-          marker.addListener('click', () => {
-            const lat = place.geometry.location.lat(); const lng = place.geometry.location.lng();
-            const mapsUrl = `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`;
-            infoWindow.setContent(
-              `<div><strong>${place.name}</strong><br />${place.rating.toFixed(1)} out of 5<br />` +
-              `<a href="${mapsUrl}" target="_blank"><button class="map-btn">Open in Google Maps</button></a></div>`
-            );
-            infoWindow.open(map, marker);
-          }); markers.push(marker);
+          const marker=new google.maps.Marker({map,position:place.geometry.location,title:place.name});
+          marker.addListener('click',()=>{
+            const lat=place.geometry.location.lat(),lng=place.geometry.location.lng();
+            const mapsUrl=`https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`;
+            infoWindow.setContent(`<div><strong>${place.name}</strong><br/>${place.rating.toFixed(1)} out of 5<br/>`+
+                                   `<a href="${mapsUrl}" target="_blank"><button class="map-btn">Open in Google Maps</button></a></div>`);
+            infoWindow.open(map,marker);
+          });
+          markers.push(marker);
         });
-
-        status.textContent = `Showing top ${top5.length} restaurants by rating with >200 reviews.`; status.className = '';
+        status.textContent=`Showing top ${top5.length} restaurants by rating with >200 reviews.`; status.className='';
       });
     }
   </script>
-
   <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqKeq3a0O__Mm7EQLy0zrHYuJUq8Ly1Ps&libraries=places&callback=initMap"></script>
 </body>
 </html>
