--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <input id="location-input" type="text" placeholder="Enter pincode or locality" />
       <select id="cuisine-select">
         <option value="">Any cuisine</option>
-        <!-- cuisines -->
+        <!-- cuisines... -->
       </select>
       <button id="search-btn">Search</button>
       <span id="status" class="status"></span>
@@ -125,7 +125,7 @@
             <th>Address</th>
           </tr>
         </thead>
-        <tbody><!-- rows --></tbody>
+        <tbody></tbody>
       </table>
     </section>
 
@@ -135,7 +135,94 @@
   </main>
 
   <script>
-    // ...existing JS remains unchanged...
+    let geocoder, placesService, autocomplete, map, infoWindow, markers = [];
+
+    function initMap() {
+      const bangaloreBounds = { north: 13.139, south: 12.787, east: 77.736, west: 77.455 };
+      geocoder = new google.maps.Geocoder();
+      placesService = new google.maps.places.PlacesService(document.createElement('div'));
+      infoWindow = new google.maps.InfoWindow();
+      autocomplete = new google.maps.places.Autocomplete(
+        document.getElementById('location-input'),
+        { bounds: bangaloreBounds, strictBounds: true, types: ['(regions)'], componentRestrictions: { country: 'IN' } }
+      );
+      document.getElementById('search-btn').addEventListener('click', onSearchClick);
+      map = new google.maps.Map(document.getElementById('map'), { center: { lat: 12.9716, lng: 77.5946 }, zoom: 12 });
+    }
+
+    function focusMarker(index) {
+      const marker = markers[index];
+      map.panTo(marker.getPosition());
+      map.setZoom(16);
+      google.maps.event.trigger(marker, 'click');
+    }
+
+    function onSearchClick() {
+      const address = document.getElementById('location-input').value.trim();
+      const cuisine = document.getElementById('cuisine-select').value;
+      const statusEl = document.getElementById('status');
+      const tbody = document.querySelector('#restaurant-table tbody');
+      tbody.innerHTML = '';
+      statusEl.textContent = '';
+      if (!address) {
+        statusEl.textContent = 'Please enter a pincode or locality.';
+        statusEl.className = 'status error';
+        return;
+      }
+      statusEl.textContent = 'Geocoding...';
+      geocoder.geocode({ address }, (results, geocodeStatus) => {
+        if (geocodeStatus !== 'OK' || !results[0]) {
+          statusEl.textContent = 'Could not find that location.';
+          statusEl.className = 'status error';
+          return;
+        }
+        statusEl.textContent = 'Searching for top-rated restaurants with >200 reviews...';
+        findTopRated(results[0].geometry.location, cuisine);
+      });
+    }
+
+    function findTopRated(location, cuisine) {
+      const request = { location, radius: 3000, type: 'restaurant' };
+      if (cuisine) request.keyword = cuisine;
+      placesService.nearbySearch(request, (results, status) => {
+        const statusEl = document.getElementById('status');
+        const tbody = document.querySelector('#restaurant-table tbody');
+        if (status !== 'OK' || !results || !results.length) {
+          statusEl.textContent = 'No restaurants found.';
+          statusEl.className = 'status error';
+          return;
+        }
+        markers.forEach(m => m.setMap(null)); markers = [];
+        const filtered = results
+          .filter(r => typeof r.rating === 'number' && (r.user_ratings_total || 0) > 200)
+          .sort((a, b) => b.rating - a.rating || (b.user_ratings_total || 0) - (a.user_ratings_total || 0));
+        const top5 = filtered.slice(0, 5);
+        map.setCenter(location); map.setZoom(14);
+        top5.forEach((place, i) => {
+          const tr = document.createElement('tr');
+          tr.innerHTML =
+            `<td><a href="javascript:void(0)" class="restaurant-link" onclick="focusMarker(${i})">${place.name}</a></td>` +
+            `<td>${place.rating.toFixed(1)}</td>` +
+            `<td>${place.user_ratings_total}</td>` +
+            `<td>${place.vicinity || place.formatted_address || ''}</td>`;
+          tbody.appendChild(tr);
+          const marker = new google.maps.Marker({ map, position: place.geometry.location, title: place.name });
+          marker.addListener('click', () => {
+            const lat = place.geometry.location.lat();
+            const lng = place.geometry.location.lng();
+            const mapsUrl = `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`;
+            infoWindow.setContent(
+              `<div><strong>${place.name}</strong><br/>${place.rating.toFixed(1)} out of 5<br/>` +
+              `<a href="${mapsUrl}" target="_blank"><button class="map-btn">Open in Google Maps</button></a></div>`
+            );
+            infoWindow.open(map, marker);
+          });
+          markers.push(marker);
+        });
+        statusEl.textContent = `Showing top ${top5.length} restaurants by rating with >200 reviews.`;
+        statusEl.className = 'status';
+      });
+    }
   </script>
   <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqKeq3a0O__Mm7EQLy0zrHYuJUq8Ly1Ps&libraries=places&callback=initMap"></script>
 </body>
