--- a/index.html
+++ b/index.html
@@ -109,7 +109,45 @@
       <input id="location-input" type="text" placeholder="Enter pincode or locality" />
       <select id="cuisine-select">
         <option value="">Any cuisine</option>
-        <!-- cuisines... -->
+        <option>American</option>
+        <option>Asian</option>
+        <option>Bakery</option>
+        <option>Bar</option>
+        <option>BBQ</option>
+        <option>Breakfast</option>
+        <option>Brazilian</option>
+        <option>British</option>
+        <option>Buffets</option>
+        <option>Café</option>
+        <option>Caribbean</option>
+        <option>Chinese</option>
+        <option>Coffee</option>
+        <option>Comfort Food</option>
+        <option>Desserts</option>
+        <option>Dim Sum</option>
+        <option>European</option>
+        <option>Fast Food</option>
+        <option>French</option>
+        <option>German</option>
+        <option>Greek</option>
+        <option>Indian</option>
+        <option>Italian</option>
+        <option>Japanese</option>
+        <option>Korean</option>
+        <option>Latin American</option>
+        <option>Malaysian</option>
+        <option>Mediterranean</option>
+        <option>Mexican</option>
+        <option>Middle Eastern</option>
+        <option>Pizza</option>
+        <option>Seafood</option>
+        <option>Spanish</option>
+        <option>Steakhouse</option>
+        <option>Sushi</option>
+        <option>Tapas</option>
+        <option>Thai</option>
+        <option>Vegetarian</option>
+        <option>Vietnamese</option>
       </select>
       <button id="search-btn">Search</button>
       <span id="status" class="status"></span>
@@ -182,20 +220,13 @@
     }
 
     function findTopRated(location, cuisine) {
-      const request = { location, radius: 3000, type: 'restaurant' };
-      if (cuisine) request.keyword = cuisine;
+      const request = { location, radius: 3000, type: 'restaurant' }; if (cuisine) request.keyword = cuisine;
       placesService.nearbySearch(request, (results, status) => {
-        const statusEl = document.getElementById('status');
-        const tbody = document.querySelector('#restaurant-table tbody');
-        if (status !== 'OK' || !results || !results.length) {
-          statusEl.textContent = 'No restaurants found.';
-          statusEl.className = 'status error';
-          return;
-        }
+        const statusEl = document.getElementById('status'); const tbody = document.querySelector('#restaurant-table tbody');
+        if (status !== 'OK' || !results || !results.length) { statusEl.textContent = 'No restaurants found.'; statusEl.className = 'status error'; return; }
         markers.forEach(m => m.setMap(null)); markers = [];
-        const filtered = results
-          .filter(r => typeof r.rating === 'number' && (r.user_ratings_total || 0) > 200)
-          .sort((a, b) => b.rating - a.rating || (b.user_ratings_total || 0) - (a.user_ratings_total || 0));
+        const filtered = results.filter(r => typeof r.rating === 'number' && (r.user_ratings_total || 0) > 200)
+                                .sort((a, b) => b.rating - a.rating || (b.user_ratings_total || 0) - (a.user_ratings_total || 0));
         const top5 = filtered.slice(0, 5);
         map.setCenter(location); map.setZoom(14);
         top5.forEach((place, i) => {
@@ -208,19 +239,14 @@
           tbody.appendChild(tr);
           const marker = new google.maps.Marker({ map, position: place.geometry.location, title: place.name });
           marker.addListener('click', () => {
-            const lat = place.geometry.location.lat();
-            const lng = place.geometry.location.lng();
+            const lat = place.geometry.location.lat(); const lng = place.geometry.location.lng();
             const mapsUrl = `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`;
-            infoWindow.setContent(
-              `<div><strong>${place.name}</strong><br/>${place.rating.toFixed(1)} out of 5<br/>` +
-              `<a href="${mapsUrl}" target="_blank"><button class="map-btn">Open in Google Maps</button></a></div>`
-            );
-            infoWindow.open(map, marker);
-          });
-          markers.push(marker);
+            infoWindow.setContent(`<div><strong>${place.name}</strong><br/>${place.rating.toFixed(1)} out of 5<br/>` +
+                                  `<a href="${mapsUrl}" target="_blank"><button class="map-btn">Open in Google Maps</button></a></div>`);
+            infoWindow.open(map,marker);
+          }); markers.push(marker);
         });
-        statusEl.textContent = `Showing top ${top5.length} restaurants by rating with >200 reviews.`;
-        statusEl.className = 'status';
+        statusEl.textContent = `Showing top ${top5.length} restaurants by rating with >200 reviews.`; statusEl.className='status';
       });
     }
   </script>
