--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     button.map-btn:hover { background: var(--primary); }
     .status { display: block; text-align: center; margin-top: 1rem; font-style: italic; }
     .error { color: red; }
-    /* Place Details component styling overrides if needed */
+    /* Place Details component styling overrides */
     map-places-details { width: 100%; height: auto; --md-card-width: 280px; margin: 0.5rem 0; }
   </style>
 </head>
@@ -226,7 +226,7 @@
     async function findTopRated(location, cuisine) {
       const request = { location, radius: 3000, type: 'restaurant' };
       if (cuisine) request.keyword = cuisine;
-      placesService.nearbySearch(request, async (results, status) => {
+      placesService.nearbySearch(request, (results, status) => {
         const statusEl = document.getElementById('status');
         const tbody = document.querySelector('#restaurant-table tbody');
         if (status !== 'OK' || !results || !results.length) {
@@ -237,18 +237,17 @@
         markers.forEach(m => m.setMap(null)); markers = [];
         const filtered = results.filter(r => typeof r.rating === 'number' && (r.user_ratings_total || 0) > 200)
                                 .sort((a, b) => b.rating - a.rating || (b.user_ratings_total || 0) - (a.user_ratings_total || 0));
-        const top20 = filtered.slice(0, 20);
+        const top5 = filtered.slice(0, 5);
         map.setCenter(location); map.setZoom(14);
 
-        for (let i = 0; i < top20.length; i++) {
-          const place = top20[i];
+        top5.forEach((place, i) => {
           const tr = document.createElement('tr');
           tr.innerHTML =
-            `<td><a href=\"javascript:void(0)\" class=\"restaurant-link\" onclick=\"focusMarker(${i})\">${place.name}</a></td>` +
+            `<td><a href="javascript:void(0)" class="restaurant-link" onclick="focusMarker(${i})">${place.name}</a></td>` +
             `<td>${place.rating.toFixed(1)}</td>` +
             `<td>${place.user_ratings_total}</td>` +
             `<td>${place.vicinity || place.formatted_address || ''}</td>` +
-            `<td><map-places-details place-id=\"${place.place_id}\"></map-places-details></td>`;
+            `<td><map-places-details place-id="${place.place_id}" tabs="menu"></map-places-details></td>`;
           tbody.appendChild(tr);
 
           const marker = new google.maps.Marker({ map, position: place.geometry.location, title: place.name });
@@ -256,12 +255,11 @@
             const lat = place.geometry.location.lat(); const lng = place.geometry.location.lng();
             const mapsUrl = `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`;
             infoWindow.setContent(`<div><strong>${place.name}</strong><br/>${place.rating.toFixed(1)} out of 5<br/>` +
-                                  `<a href=\"${mapsUrl}\" target=\"_blank\"><button class=\"map-btn\">Open in Google Maps</button></a></div>`);
+                                  `<a href="${mapsUrl}" target="_blank"><button class="map-btn">Open in Google Maps</button></a></div>`);
             infoWindow.open(map,marker);
-          });
-          markers.push(marker);
-        }
-        statusEl.textContent = `Showing top ${top20.length} restaurants by rating with >200 reviews.`;
+          }); markers.push(marker);
+        });
+        statusEl.textContent = `Showing top ${top5.length} restaurants by rating with >200 reviews.`;
         statusEl.className = 'status';
       });
     }
