--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <th>Menu</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody> <!-- rows will be inserted here --></tbody>
       </table>
     </section>
 
