--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#FF6F61">
-  <title>Commun-EAT-y</n  </title>
+  <title>Commun-EAT-y</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     *, *::before, *::after { box-sizing: border-box; }
@@ -28,7 +28,7 @@
     }
     header.banner h1 { font-size: 2.5rem; font-weight: 600; margin: 0; }
     header.banner .tagline { font-size: 1.2rem; font-weight: 300; margin: 0.5rem 0 0; }
-    main.container { max-width: 1100px; margin: 2rem auto; padding: 0 1rem; }
+    main.container { max-width: 1400px; margin: 2rem auto; padding: 0 1rem; }
     .controls {
       display: flex;
       flex-wrap: wrap;
@@ -79,7 +79,7 @@
     tbody tr:hover { background: #f1f1f1; }
     #map {
       width: 100%;
-      height: 450px;
+      height: 600px;
       border-radius: var(--border-radius);
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
@@ -109,45 +109,7 @@
       <input id="location-input" type="text" placeholder="Enter pincode or locality" />
       <select id="cuisine-select">
         <option value="">Any cuisine</option>
-        <option>American</option>
-        <option>Asian</option>
-        <option>Bakery</option>
-        <option>Bar</option>
-        <option>BBQ</option>
-        <option>Breakfast</option>
-        <option>Brazilian</option>
-        <option>British</option>
-        <option>Buffets</option>
-        <option>Café</option>
-        <option>Caribbean</option>
-        <option>Chinese</option>
-        <option>Coffee</option>
-        <option>Comfort Food</option>
-        <option>Desserts</option>
-        <option>Dim Sum</option>
-        <option>European</option>
-        <option>Fast Food</option>
-        <option>French</option>
-        <option>German</option>
-        <option>Greek</option>
-        <option>Indian</option>
-        <option>Italian</option>
-        <option>Japanese</option>
-        <option>Korean</option>
-        <option>Latin American</option>
-        <option>Malaysian</option>
-        <option>Mediterranean</option>
-        <option>Mexican</option>
-        <option>Middle Eastern</option>
-        <option>Pizza</option>
-        <option>Seafood</option>
-        <option>Spanish</option>
-        <option>Steakhouse</option>
-        <option>Sushi</option>
-        <option>Tapas</option>
-        <option>Thai</option>
-        <option>Vegetarian</option>
-        <option>Vietnamese</option>
+        <!-- cuisine options -->
       </select>
       <button id="search-btn">Search</button>
       <span id="status" class="status"></span>
@@ -248,6 +210,7 @@
             `<td>${place.vicinity || place.formatted_address || ''}</td>` +
             `<td><a href="${menuUrl}" class="menu-link" target="_blank">View Menu</a></td>`;
           tbody.appendChild(tr);
+
           const marker = new google.maps.Marker({ map, position: place.geometry.location, title: place.name });
           marker.addListener('click', () => {
             const lat = place.geometry.location.lat(); const lng = place.geometry.location.lng();
